--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Sea stories'
+- GITenberg
 title: The Cruise of the Nonsuch Buccaneer
 url: http://www.gutenberg.org/ebooks/21062
